force-app/main/default/objects/AccountPlan__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <description>Link to Quip Account Plan Document</description>
    <label>Account Plan</label>
    <type>Url</type>
</CustomField>