force-app/main/default/objects/AccountPlan__c/fields/Business2__c.field-meta.xml
<CustomField>
    <fullName>Business2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field is created as a part of Cargill Leap Project</description>
    <label>Business</label>
    <referenceTo>BusinessDetail__c</referenceTo>
    <relationshipLabel>Account Plans</relationshipLabel>
    <relationshipName>Account_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>