force-app/main/default/objects/AccountPlan__c/fields/ContributionMargin__c.field-meta.xml
<CustomField>
    <fullName>ContributionMargin__c</fullName>
    <label>Contribution Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>