force-app/main/default/objects/AccountPlan__c/fields/Customer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Customer_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Profile</label>
    <referenceTo>CustomerProfile__c</referenceTo>
    <relationshipLabel>Account Plans</relationshipLabel>
    <relationshipName>Account_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>