force-app/main/default/objects/AccountPlan__c/fields/FiscalYear__c.field-meta.xml
<CustomField>
    <fullName>FiscalYear__c</fullName>
    <label>Fiscal Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2017-2018</fullName>
            </value>
            <value>
                <fullName>2018-2019</fullName>
            </value>
            <value>
                <fullName>2019-2020</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>