force-app/main/default/objects/AccountPlan__c/fields/IsOriginal__c.field-meta.xml
<CustomField>
    <fullName>IsOriginal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsOriginal</label>
    <type>Checkbox</type>
</CustomField>