force-app/main/default/objects/AccountPlan__c/fields/MarketShare__c.field-meta.xml
<CustomField>
    <fullName>MarketShare__c</fullName>
    <label>Market Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>