force-app/main/default/objects/AccountPlan__c/fields/StrategicPriorities__c.field-meta.xml
<CustomField>
    <fullName>StrategicPriorities__c</fullName>
    <label>Strategic Priorities</label>
    <length>20</length>
    <type>Text</type>
</CustomField>