force-app/main/default/objects/AccountPlan__c/fields/UnitofMeasure2__c.field-meta.xml
<CustomField>
    <fullName>UnitofMeasure2__c</fullName>
    <description>IDCTask-0000000145, referencing UNIT of Measure(combined)</description>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_of_Measure_Combined</valueSetName>
    </valueSet>
</CustomField>