force-app/main/default/objects/AccountPlan__c/fields/VolumeActuals__c.field-meta.xml
<CustomField>
    <fullName>VolumeActuals__c</fullName>
    <label>Volume Actuals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>