force-app/main/default/objects/AccountPlan__c/validationRules/RestrictAccountPlanNameUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictAccountPlanNameUpdate</fullName>
    <active>true</active>
    <description>Account Plan Name cannot be updated. It can be editable only at the time of creation.</description>
    <errorConditionFormula>AND(
 NOT(ISNEW()),
 ISCHANGED(Name),
 $Profile.Name  &lt;&gt; &#39;System Administrator&#39;
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Account Plan Name cannot be changed.</errorMessage>
</ValidationRule>