force-app/main/default/objects/AccountPlan__c/listViews/Protein_Ingredients_Channel_Leader_AccountPlan.listView-meta.xml
<ListView>
    <fullName>Protein_Ingredients_Channel_Leader_AccountPlan</fullName>
    <filterScope>Queue</filterScope>
    <label>Protein Ingredients Channel Leader</label>
    <queue>Protein_Ingredients_Channel_Leader</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>