force-app/main/default/objects/AccountPlan__c/listViews/Retail_Channel_Leader_AccountPlan.listView-meta.xml
<ListView>
    <fullName>Retail_Channel_Leader_AccountPlan</fullName>
    <filterScope>Queue</filterScope>
    <label>Retail Channel Leader</label>
    <queue>Retail_Channel_Leader</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>